--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,23 @@
 <body>
 
   <!-- Header Section -->
-  <header class="bg-black py-12 text-movie-grey font-gemunu uppercase">
+  <header class="bg-black py-6 lg:py-12 text-movie-grey uppercase">
     <!-- Header Container -->
-    <div class="container flex items-center justify-between space-x-16">
+    <div class="container flex items-center justify-between space-x-8 lg:space-x-16">
       <!-- Logo -->
-      <a href="#" class="text-6xl font-bold text-transparent bg-gradient-to-t bg-clip-text from-movie-red to-movie-grey">Logo</a>
+      <a href="#" class="pl-4 md:pl-0 text-4xl lg:text-6xl font-bold text-transparent bg-gradient-to-t bg-clip-text from-movie-red to-movie-grey">Logo</a>
+      <!-- Mobile Menu -->
+      <div class="block md:hidden pr-4">
+        <div class="space-y-1 cursor-pointer">
+          <div class="bg-movie-grey w-8 h-1 rounded-full"></div>
+          <div class="bg-movie-grey w-8 h-1 rounded-full"></div>
+          <div class="bg-movie-grey w-8 h-1 rounded-full"></div>
+        </div>
+      </div>
       <!-- Navigation -->
-      <nav class="flex justify-between flex-1">
+      <nav class="hidden md:flex justify-between flex-1">
         <!-- Menu -->
-        <div class="flex items-center text-lg space-x-8">
+        <div class="flex items-center lg:text-lg space-x-4 lg:space-x-8">
           <a href="#" class="hover:text-movie-melon transition duration-500">moives</a>
           <a href="#" class="hover:text-movie-melon transition duration-500">celebrities</a>
           <a href="#" class="hover:text-movie-melon transition duration-500">blog</a>
@@ -35,20 +43,20 @@
           <a href="#" class="hover:text-movie-melon transition duration-500">about</a>
         </div>
         <!-- Login Area -->
-        <div class="flex items-center space-x-8">
+        <div class="flex items-center space-x-4 lg:space-x-8">
           <!-- Search Area -->
           <form>
-            <div class=" group border-r px-4 mx-4 py-1 border-movie-red" >
-              <input type="text" class="opacity-0 group-hover:opacity-100 bg-black border-b border-movie-red focus:outline-none w-44 transition duration-500">
+            <div class="group border-r px-4 mx-4 py-1 border-movie-red" >
+              <input type="text" class="opacity-0 group-hover:opacity-100 bg-black border-b border-movie-red focus:outline-none w-24 lg:w-44 transition duration-500">
               <button class="transition duration-500">
                 <i class="fas fa-search group-hover:text-movie-red transition duration-500"></i>
               </button>
             </div>
           </form>
           <!-- Signup Area -->
-          <div class="flex items-center space-x-8 text-lg">
+          <div class="flex items-center space-x-4 lg:space-x-8 lg:text-lg">
             <a href="#">Login</a>
-            <a href="#" class="bg-movie-red px-3 py-1 hover:bg-rose-600 hover:text-movie-grey cursor-pointer transition duration-500">Sign up</a>
+            <a href="#" class="bg-movie-red px-3 py-1 hover:bg-rose-600 hover:text-movie-grey cursor-pointer transition duration-500 whitespace-nowrap">Sign up</a>
           </div>
         </div>
       </nav>
