Slider section done

--- a/public/index.html
+++ b/public/index.html
@@ -63,5 +63,50 @@
     </div>
   </header>
 
+  <!-- Hero Section -->
+  <section class="h-64 md:h-96 lg:h-128 group relative">
+    <!-- Hero Image -->
+    <img src="./images/movie.png" class="h-full w-full object-cover" alt="">
+    <!-- Hero Content -->
+    <div class="absolute bottom-0 w-full bg-gradient-to-b from-transparent to-black">
+      <!-- Hero Content Container -->
+      <div class="container pl-10 lg:pl-0">
+        <h3 class="text-movie-melon tracking-wider group-hover:mb-1 duration-500">
+          Aksiyon, Drama, Gerilim
+        </h3>
+        <h1 class="text-4xl lg:text-6xl text-movie-grey group-hover:mb-1 duration-500 ">
+          The Neon City
+        </h1>
+        <p class="text-movie-grey group-hover:mb-2 duration-500 text-sm lg:text-base w-3/4 lg:w-2/3">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta beatae veritatis voluptas cupiditate, magnam modi fugiat animi ut aspernatur voluptatum!
+        </p>
+        <!-- Detail Container -->
+        <div class="flex space-x-8 opacity-0 group-hover:opacity-100 group-hover:mb-10 lg:group-hover:mb-20 duration-1000">
+          <!-- Watch -->
+          <div class="flex space-x-2 items-center cursor-pointer hover:text-movie-red text-movie-grey duration-500">
+            <div class="flex h-8 w-8 text-center items-center rounded-full justify-center">
+              <i class="fas fa-play"></i>
+            </div>
+            <a href="#" class="uppercase lg:text-lg ">Oynat</a>
+          </div>
+          <!-- Info -->
+          <div class="flex space-x-2 items-center cursor-pointer hover:text-movie-red text-movie-grey duration-500">
+            <div class="flex h-8 w-8 text-center items-center rounded-full justify-center">
+              <i class="fas fa-arrow-right"></i>
+            </div>
+            <a href="#" class="uppercase lg:text-lg ">Benzer İçerİkler</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Points -->
+    <div class="flex space-x-3 absolute bottom-3 lg:bottom-5 left-10  lg:left-96 opacity-0 group-hover:opacity-100 duration-1000">
+      <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-movie-red hover:bg-movie-red duration-500 cursor-pointer"></div>
+      <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-movie-grey hover:bg-movie-red duration-500 cursor-pointer"></div>
+      <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-movie-grey hover:bg-movie-red duration-500 cursor-pointer"></div>
+      <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-movie-grey hover:bg-movie-red duration-500 cursor-pointer"></div>
+    </div>
+  </section>
+
 </body>
 </html>
